# RetailerCustomerPlatform

./: .coverage  .coveragerc  .gitignore  .replit  Ordering_Platform_APIs.postman_collection.json  Procfile  check_api_visibility.py  check_categories.py  collect_log.txt  conftest.py  debug_img.py  final_results.txt  generate_dummy_data.py  inspect_categories.py  inspect_categories_shell.py  manage.py  patch_views.py  pyproject.toml  pytest.ini  pytest_analysis.txt  pytest_analysis_utf8.txt  pytest_errors.txt  pytest_output_fail.txt  replit.md  requirements-dev.txt  requirements.txt  test_claiming.py  verify_api.py  verify_offers_v2.py
authentication/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
cart/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
common/: error_utils.py  logging_handlers.py  middleware.py  notifications.py  pagination.py  permissions.py  utils.py
customers/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
offers/: admin.py  apps.py  engine.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
ordering_platform/: asgi.py  production.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  projections.py  queries.py  serializers.py  tests.py  urls.py  views.py
products/: admin.py  api_erp_views.py  models.py  new_views_snippet.py  serializers.py  signals.py  tests_search.py  urls.py  views.py
retailers/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
returns/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
(+197 files in other folders)
